@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: munge.h,v 1.22 2004/08/26 17:45:58 dun Exp $
+ *  $Id: munge.h,v 1.23 2004/10/13 21:52:56 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -143,22 +143,23 @@ typedef enum munge_err {
     EMUNGE_SUCCESS              =  0,   /* Whoohoo!                          */
     EMUNGE_SNAFU                =  1,   /* Doh!                              */
     EMUNGE_BAD_ARG              =  2,   /* Invalid argument                  */
-    EMUNGE_OVERFLOW             =  3,   /* Buffer overflow                   */
-    EMUNGE_NO_MEMORY            =  4,   /* Out of memory                     */
-    EMUNGE_NO_DAEMON            =  5,   /* Munged not found                  */
-    EMUNGE_SOCKET               =  6,   /* Munged communication error        */
-    EMUNGE_TIMEOUT              =  7,   /* Munged timeout                    */
-    EMUNGE_BAD_CRED             =  8,   /* Bad credential format             */
-    EMUNGE_BAD_VERSION          =  9,   /* Bad credential version            */
-    EMUNGE_BAD_CIPHER           = 10,   /* Bad credential cipher type        */
-    EMUNGE_BAD_ZIP              = 11,   /* Bad credential compression type   */
-    EMUNGE_BAD_MAC              = 12,   /* Bad credential msg auth code type */
-    EMUNGE_BAD_REALM            = 13,   /* Bad credential security realm     */
-    EMUNGE_CRED_INVALID         = 14,   /* Credential invalid                */
-    EMUNGE_CRED_EXPIRED         = 15,   /* Credential expired                */
-    EMUNGE_CRED_REWOUND         = 16,   /* Credential created in the future  */
-    EMUNGE_CRED_REPLAYED        = 17,   /* Credential replayed               */
-    EMUNGE_CRED_UNAUTHORIZED    = 18,   /* Credential decode unauthorized    */
+    EMUNGE_BAD_LENGTH           =  3,   /* Exceeded maximum message length   */
+    EMUNGE_OVERFLOW             =  4,   /* Buffer overflow                   */
+    EMUNGE_NO_MEMORY            =  5,   /* Out of memory                     */
+    EMUNGE_NO_DAEMON            =  6,   /* Munged not found                  */
+    EMUNGE_SOCKET               =  7,   /* Munged communication error        */
+    EMUNGE_TIMEOUT              =  8,   /* Munged timeout                    */
+    EMUNGE_BAD_CRED             =  9,   /* Bad credential format             */
+    EMUNGE_BAD_VERSION          = 10,   /* Bad credential version            */
+    EMUNGE_BAD_CIPHER           = 11,   /* Bad credential cipher type        */
+    EMUNGE_BAD_ZIP              = 12,   /* Bad credential compression type   */
+    EMUNGE_BAD_MAC              = 13,   /* Bad credential msg auth code type */
+    EMUNGE_BAD_REALM            = 14,   /* Bad credential security realm     */
+    EMUNGE_CRED_INVALID         = 15,   /* Credential invalid                */
+    EMUNGE_CRED_EXPIRED         = 16,   /* Credential expired                */
+    EMUNGE_CRED_REWOUND         = 17,   /* Credential created in the future  */
+    EMUNGE_CRED_REPLAYED        = 18,   /* Credential replayed               */
+    EMUNGE_CRED_UNAUTHORIZED    = 19,   /* Credential decode unauthorized    */
     EMUNGE_LAST_ENTRY
 } munge_err_t;
 
